Сверстано вторая часть

--- a/index.html
+++ b/index.html
@@ -4,62 +4,121 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Моё портфолио</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <title>Артём Исламов-веб-разработчик, фрилансер</title>
+  <title>HTML Webpage with Emoji</title>
+  <link rel="stylesheet" href="css/stayle.css"><!-- команда для подключения стилей -->
+  <link rel="stylesheet" href="css/normalize.css"><!-- Подключение библиотеки с стилями, для браузера -->
+  <link rel="preconnect" href="https://fonts.googleapis.com"><!-- 1 -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><!-- 2 -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"><!-- 1 и 2 Подключение Шрифтов -->
+</head>
 <body>
-  <div class="navbar container">
-    <img src="images/Logo.svg" alt="Logo">
-    <nav class="navigation">
-      <ul class="nav-list">
-        <li class="nav-item"><a href="#" class="nav-link active">Главная</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Проекты</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Обо мне</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Связаться</a></li>
-      </ul>
-    </nav>
+ <div class="navbar container"><!-- шапка сайта (логотип и навигационное меню) -->
+  <img src="images/logo.svg" alt="Logo"><!-- команда для привязки картинок,фото,логотипов -->
+  <nav class="navigaton"><!-- команда для навигационного меню -->
+    <ul class="nav-list"><!-- тег для списка с элементами списка и ссылками -->
+      <li class="nav-item"><a href="#" class="nav-link active">Главная</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">Проекты</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">Обо мне</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">Связаться</a></li>
+    </ul>
+  </nav>
+ </div>
+<!-- navbar -->
+
+<heder class="heder container"><!-- вторая часть,картинка с текстом -->
+  <img src="images/avatar.png" alt="Артём Исламов" class="heder-photo" /><!-- подключение картинки -->
+  <!-- /.heder-photo -->
+  <div class="heder-text"><!-- текст -->
+    <strong class="header-strong">Привет</strong>
+    <h2 class="header-heading">
+      <span class="header-primary">Я фронтенд-разработчик и веб-дизайнер</span> <br /><!-- текст с переносом -->
+        Меня зовут Артем Исламов и я делаю <br /><!-- перенос второй строки -->
+        сайты для людей и компаний
+    </h2>
+  <div class="header-links"><!-- список социальных сетей -->
+    <ul class="social-list">
+      <li class="social-item">
+        <a href="#" class="social-link"><img src="images/icon/linkedin.svg" alt="linkedin" class="social-logo"></a>
+      </li>
+      <li class="social-item">
+        <a href="#" class="social-link"><img src="images/icon/twitter.svg" alt="twitter" class="social-logo"></a>
+      </li>
+      <li class="social-item">
+        <a href="#" class="social-link"><img src="images/icon/github.svg" alt="github" class="social-logo"></a>
+      </li>
+      <li class="social-item">
+        <a href="#" class="social-link"><img src="images/icon/stackoverflow.svg" alt="stackoverflow" class="social-logo"></a>
+      </li>
+      <li class="social-item">
+        <a href="#" class="social-link"><img src="images/icon/youtube.svg" alt="youtube" class="social-logo"></a>
+      </li>
+    </ul>
+    <a href="#" class="cv-download" download>
+      <img src="images/icon/download.svg" alt="download-icon" class="cv-icon">
+      <span class="cv-text">Скачать резюме</span>
+    </a>
+   </div>
+   <!-- /.header-links -->
   </div>
-  <!--./navbar  -->
-  <header class="header container">
-    <img src="images/photo.png" alt="Александр Барков" class="header-photo">
-    <!-- /.header-photo -->
-    <div class="header-text">
-      <strong class="header-strong">Привет 👋</strong>
-      <h1 class="header-heding">
-       <span class="header-primary">Я фронтенд-разработчик и веб-дизайнер</span> <br />
-        Меня зовут Александр Барков  <br />
-        и я делаю сайты для людей и компаний
-      </h1>
-      <div class="header-links">
-        <ul class="social-list">
-          <li class="social-item">
-            <a href="" class="social-link"><img src="images/icons/linkedin.svg" alt="linkedin" class="social-logo"></a>
-          </li>
-          <li class="social-item"> 
-            <a href="" class="social-link"><img src="images/icons/twitter.svg" alt="twitter" class="social-logo"></a>
-          </li>
-          <li class="social-item">
-            <a href="" class="social-link"><img src="images/icons/github.svg" alt="github" class="social-logo"></a>
-          </li>
-          <li class="social-item">
-            <a href="" class="social-link"><img src="images/icons/stackoverflow.svg" alt="stackover" class="social-logo"></a>
-          </li>
-          <li class="social-item">
-            <a href="" class="social-link"><img src="images/icons/youtube.svg" alt="youtube" class="social-logo"></a>
-          </li>
-        </ul>
-        <a href="#" class="cv-download" download>
-          <img src="images/icons/Vector.svg" alt="download-icon">
-          <span class="cv-text">скачать резюме</span>
-        </a>
-      </div>
-      <!-- /.header-links -->
-    </div>
-    <!-- /.header-text -->
-  </header>
-  <!-- /.header -->
-</body>
+  <!-- /.heder-text -->
+</heder>
+<!-- /.heder -->
+<section class="portfolio">
+  <div class="block">
+    <h2 class="section-heading">Последние проекты</h2>
+    <div class="cards">
+      <div class="card">
+        <img src="images/portfolio/image 1.jpg" alt="мобильное преложение" class="card-image">
+        <div class="card-text-wrapper">
+          <h3 class="card-titli">Мобильное приложение</h3>
+            <ul class="tags">
+              <li class="tags-item"><a href="#" class="tag">HTML</a></li>
+              <li class="tags-item"><a href="#" class="tag">CSS</a></li>
+              <li class="tags-item"><a href="#" class="tag">JavaScript</a></li>
+              <li class="tags-item"><a href="#" class="tag">Git</a></li>
+              <li class="tags-item"><a href="#" class="tag">Vitejs</a></li>
+            </ul>
+          <p class="card-text">
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <div class="">
+            <a href="#" class="card-button">
+              <img src="images/icon/code.svg" alt="" class="card-button-icon">
+              <span class="card-button-text">Код</span>
+            </a>
+            <a href="#" class="card-button">
+              <img src="images/icon/chek.svg" alt="" class="card-button-icon">
+              <span class="card-button-text">Демо</span>
+            </a>
+          </div><!-- card-buttons -->
+        </div> <!-- /.card-text-wrapper -->
+      </div> <!-- /.card -->
+      <div class="card">
+        <img src="images/portfolio/image 2.jpg" alt="Одностраничный промо-сайт" class="card-image">
+        <div class="card-text-wrapper">
+          <h3 class="card-titli">Одностраничный промо-сайт</h3>
+            <ul class="tags">
+              <li class="tags-item"><a href="#" class="tag">HTML</a></li>
+              <li class="tags-item"><a href="#" class="tag">CSS</a></li>
+            </ul>
+            <p class="card-text">
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <div class="card-buttons">
+              <a href="#" class="card-button">
+                <img src="images/icon/code.svg" alt="" class="card-button-icon">
+                <span class="card-button-text">Код</span>
+              </a>
+              <a href="#" class="card-button">
+                <img src="images/icon/chek.svg" alt="" class="card-button-icon">
+                <span class="card-button-text">Демо</span>
+              </a>
+            </div><!-- card-buttons -->
+          </div><!-- /.card-text-wrapper -->
+      </div>   <!-- card -->
+    </div>    <!-- cards -->
+  </div><!-- block -->
+</section><!-- /.portfolio --> 
+</body> 
 </html>
