--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <li class="nav-item"><a href="#" class="nav-link">Проекты</a></li>
       <li class="nav-item"><a href="#" class="nav-link">Обо мне</a></li>
       <li class="nav-item"><a href="#" class="nav-link">Связаться</a></li>
-    </ul>
+    </ul> 
   </nav>
  </div>
 <!-- navbar -->
@@ -120,5 +120,36 @@
     </div>    <!-- cards -->
   </div><!-- block -->
 </section><!-- /.portfolio --> 
+<div class="section developer container">
+  <img src="images/developer-photo.png" alt="Артём Исламов" class="developer-photo">
+  <div class="developer-about">
+    <span class="developer-helloo">Рад вас видеть</span>
+    <h2 class="developer-title">Я Артем Исламов</h2>
+    <p class="developer-text">Я разрабатываю сайты для людей и компаний. Делаю всё сам: составляю прототип, дизайн-макет, пишу код.
+    </p>
+    <span class="motto">Код, Дизайн, Обучение</span>
+    <p class="developer-text">
+      Могу собрать страницу для вашей компании, даже если запускать её нужно уже завтра. Из инструментов есть: 
+      Tilda, Webflow, Figma, HTML, CSS, JavaScript и Wordpress
+    </p>
+    <img src="images/sint.png" alt="Подпись" class="developer-sitn">
+  </div>
+  <!-- /.developer-about -->
+</div>
+<!-- /.section developer container -->
+<sectoin class="skills-union">
+  <h2 class="skills-title">Работаю с разными языками и инструментами</h2>
+  <ul class="tagz">
+    <li class="tags-item"><a href="#" class="tag">HTML</a></li>
+    <li class="tags-item"><a href="#" class="tag">CSS</a></li>
+    <li class="tags-item"><a href="#" class="tag">JavaScript</a></li>
+    <li class="tags-item"><a href="#" class="tag">Wordpress</a></li>
+    <li class="tags-item"><a href="#" class="tag">npm</a></li>
+    <li class="tags-item"><a href="#" class="tag">Reactjs</a></li>
+    <li class="tags-item"><a href="#" class="tag">Nextjs</a></li>
+    <li class="tags-item"><a href="#" class="tag">UI Design</a></li>
+    <li class="tags-item"><a href="#" class="tag">SASS</a></li>
+  </ul>
+</sectoin>
 </body> 
 </html>
